--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-home [idAccount] = 1></app-home>
+<app-navbar></app-navbar>
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+</div>
+<div class="position-sticky bottom justify-content-center">
+    <app-footer></app-footer>
+</div>
