--- a/src/app/common/components/home/home.component.html
+++ b/src/app/common/components/home/home.component.html
@@ -1,12 +1,39 @@
-<p>home works!</p>
-<p>Le montant de votre solde est {{account.balance | currency:'EUR'}}</p>
-<div class="row">
-    <div class="column" >
-      <h2>Le montant de votre solde est {{account.balance | currency:'EUR'}}</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column" s>
-      <h2>Column 2</h2>
-      <p>Some text..</p>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col ">
+      <div class="row justify-content-center">
+        <h2>Le montant de votre solde est {{account.balance | currency:'EUR'}}</h2>
+      </div>
+      <div class="row container-fluid justify-content-center">
+        <div class="panel panel-default">
+          <div class="panel-heading">HISTORIQUE DES TRANSACTIONS</div>
+          <table class="table table-striped table-dark">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Type de transaction</th>
+                <th scope="col">Montant</th>
+                <th scope="col">Date</th>
+              </tr>
+            </thead>
+            <tbody >
+              <tr *ngFor='let transaction of account.listTransactions; let i=index;'>
+                <th scope="row">{{i+1}}</th>
+                <div *ngIf="transaction.montant>=0; else notShow">
+                  <td>Dépôt</td>
+                </div>
+                
+                <ng-template #notShow>
+                  <td>Retrait</td>
+                </ng-template>
+                <td>{{transaction.montant | currency : 'EUR'}}</td>
+                <td>{{transaction.date | date}}</td>
+              </tr>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
+
+
+</div>
